--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -14,8 +14,8 @@
         <div class="col-md-9">
               <br><br>
           <div class="row text-center">
-                        <img src="../../static/image/capacitacion.png" width="150" th:src="@{/image/capacitacion.png}"/>
-                         </div>
+                    <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
+            </div><br>
            <form class="form-horizontal" id="formp" >    
       <table id="tablita" class="table table-striped table-bordered" >
                     <thead>
