--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -24,9 +24,9 @@
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">código de Comite:</label>
+                            <label class="col-sm-5 control-label">Código de Comite:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
+                                <p class="form-control-static" th:text="${comite.codigocomite}">Codigo de comite</p></div>
                         </div>
 <!--                        <div class="form-group">
                             <label class="col-sm-5 control-label">DUI:</label>
