--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -22,12 +22,12 @@
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo Costo de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Código Costo de Capacitacion:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${costocapacitacion.codigocostocapacitacion}">codigo de costo de Capacitacion</p></div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Costo Por Persona:</label>
+                            <label class="col-sm-5 control-label">Costo Por Persona($):</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${costocapacitacion.costopersona}">Costo por persona</p>
                             </div>
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Costo capacitador:</label>
+                            <label class="col-sm-5 control-label">Costo capacitador($):</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${costocapacitacion.costocapacitador}">Costo Capacitador</p>
                             </div>
