--- a/src/main/resources/templates/fragments/beneficio/beneficioshow.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>SISADMRH</title>
+    <title>Detalle de Beneficios</title>
      <th:block th:include="../templates/header"></th:block>
  
 
@@ -17,18 +17,17 @@
           <div class="row text-center">
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
                     </div>
-        <h3 align="center">Detalle de Beneficios</h3>
     
         <div>
             <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">código:</label>
+                    <label class="col-sm-2 control-label">Código:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.codigobeneficio}">Usuario Id</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre:</label>
+                    <label class="col-sm-2 control-label">Nombre beneficio:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.nombrebeneficio}">Nombre</p>
                     </div>
@@ -41,14 +40,14 @@
                 </div>
                 
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Inicio de Beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha de inicio de beneficio:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.fechainiciobeneficio}">descripcion</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Fin de Beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha fin de beneficio:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.fechafinalizarbeneficio}">descripcion</p>
                     </div>
@@ -65,4 +64,10 @@
     </div>
 
 </body>
+<script>
+    $(document).ready(function () {
+         Textheader('pnt_bene',document.title);
+       
+    });
+    </script>
 </html>
