--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH</title>
+        <title>Datos de Capacitador</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -14,10 +14,13 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-        <h3 align="center">Datos de Capacitador</h3>
+        <h3 align="center"></h3>
         <div>
             <form class="form-horizontal">
-
+ <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/capacitador.png" width="150" th:src="@{/image/capacitador.png}"/>
+                         </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Código capacitador:</label>
                     <div class="col-sm-10">
@@ -50,13 +53,13 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control">Tipo Capacitador:</label>
+                    <label class="col-sm-2 control-label">Tipo Capacitador:</label>
                     <div class="col-sm-10">
                         <p class="" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
                     </div>
                 </div>
                      <div class="form-group">
-                    <label class="col-sm-2 control">Tipo Agrupación:</label>
+                    <label class="col-sm-2 control-label">Tipo Agrupación:</label>
                     <div class="col-sm-10">
                         <p class="" th:text="${capacitador.tipoagrupacion}">Tipo Agrupación</p>
                     </div>
@@ -99,7 +102,7 @@
                     </div>
                 </div>
                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">EmpleadoCapacitador</label>
+                                    <label class="col-sm-2 control-label">Empleado Capacitador</label>
                                     <div class="col-sm-10">
                                         <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
                                          <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
@@ -120,4 +123,10 @@
         <th:block th:include="../templates/footer"></th:block>
     </div>
 </body>
+<script>
+    $(document).ready(function () {
+         Textheader('pnt_cosc',document.title);
+       
+    });
+    </script>
 </html>
