--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -40,7 +40,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                 </div>
                             </div>
                <div class="form-group">
-                    <label class="col-sm-2 control-label">acuerdo:</label>
+                    <label class="col-sm-2 control-label">Acuerdo:</label>
                     <div class="col-sm-10">
                         <input type="file" name="file" />
                                <!--class="" required="true" th:field="*{docaprovacion}"-->
