--- a/src/main/resources/templates/fragments/comision/comisionshow.html
+++ b/src/main/resources/templates/fragments/comision/comisionshow.html
@@ -22,7 +22,7 @@
              <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo:</label>
+                    <label class="col-sm-2 control-label">Código:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${comision.codigocomision}">Usuario Id</p></div>
                 </div>
