--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH</title>
+        <title>Datos de Cuadros Directivos</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -14,12 +14,13 @@
          <th:block th:include="../templates/menu"></th:block>
     </div> 
       <div class="col-md-8">
-        <h3 align="center">Datos de Cuadros Directivos</h3>
+        <h3 align="center"></h3>
         <div>
             <form class="form-horizontal">
-
+<div class="row text-center">
+    <img src="../../static/image/cuadro.png" width="100" th:src="@{/image/cuadro.png}"/></div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">código</label>
+                    <label class="col-sm-2 control-label">Código</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.codigocuadrodirectivo}">cuadro Id</p></div>
                 </div>
@@ -37,7 +38,7 @@
                                     </div>
                                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">area:</label>
+                    <label class="col-sm-2 control-label">Area:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.area}">Area</p>
                     </div>
@@ -80,6 +81,11 @@
             <th:block th:include="../templates/footer"></th:block>
         </div>
  </div>
-
+<script>
+    $(document).ready(function () {
+         Textheader('pnt_cudi',document.title);
+       
+    });
+    </script>
 </body>
 </html>
