--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionshow.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionshow.html
@@ -22,7 +22,7 @@
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">código de evaluación capacitación:</label>
+                            <label class="col-sm-5 control-label">Código de evaluación capacitación:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${evaluacioncapacitacion.codigoevaluacioncapacitacion}">codigo evaluacion capacitacion</p></div>
                         </div>
