--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -17,6 +17,9 @@
 <!--        <h3 align="center">Detalle de Inasistencia</h3>-->
         <div>
             <form class="form-horizontal">
+                <div class="row text-center">
+                    <img src="../../static/image/asistencia.png" width="100" th:src="@{/image/asistencia.png}"/>
+                </div>
 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Código inasistencia:</label>
