--- a/src/main/resources/templates/fragments/rol/roles.html
+++ b/src/main/resources/templates/fragments/rol/roles.html
@@ -19,7 +19,7 @@
             <table id="tablita" class="table table-striped">
                   <thead>  
                 <tr>
-                    <th>Codigo</th>
+                    <th>Código</th>
                     <th>Nombre</th>
                     <th>Descripcion</th>
                     <th></th><th></th><th></th>
