--- a/src/main/resources/templates/fragments/rol/rolshow.html
+++ b/src/main/resources/templates/fragments/rol/rolshow.html
@@ -15,7 +15,7 @@
             <form class="form-horizontal">
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">codigo:</label>
+                    <label class="col-sm-2 control-label">Código:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${rol.codigorol}">Rol Id</p></div>
                 </div>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">descripcion:</label>
+                    <label class="col-sm-2 control-label">Descripción:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${rol.descripcionrol}">descripcion</p>
                     </div>
